--- a/fe/src/styles.scss
+++ b/fe/src/styles.scss
@@ -2,7 +2,35 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 body {
-    margin: 0;
+  margin: 0;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+
+.marker {
+    background-image: url('./assets/mapbox-icon.png');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    cursor: pointer;
+    border: 2px solid blue;
+  }
+
+  .marker-start {
+    background-image: url('./assets/mapbox-icon.png');
+    background-size: cover;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 2px solid red;
+  }
