--- a/fe/src/app/app.component.html
+++ b/fe/src/app/app.component.html
@@ -1,4 +1,10 @@
+
+<div class="container">
+  <app-navbar></app-navbar>
+  <div class="router-wrapper">
+    <router-outlet></router-outlet>
+  </div>
+</div>
 <noscript>
   Please enable JavaScript to run this application.
 </noscript>
-<router-outlet></router-outlet>
