--- a/fe/src/app/components/destinations/destinations.component.scss
+++ b/fe/src/app/components/destinations/destinations.component.scss
@@ -1,6 +1,56 @@
+@import '../../../assets/css/colors.scss';
+
 app-map {
-    height: 75%;
-    width: 750;
-    border: 2px solid red;
+    height: 60%;
+    width: 100%;
     display: block;
+}
+
+.destination-help-pane {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.destination-data {
+    width: 70vw;
+}
+
+.next {
+    padding: 0.5rem;
+}
+
+.location-string {
+    text-align: center;
+    font-size: 2rem;
+    margin: 0;
+    align-self: flex-start;
+}
+
+.destination-help {
+    height: 35%;
+    padding: 1rem;
+    color: $plain-color;
+    background-color: $solid-color;
+    display: flex;
+    justify-content: space-around;
+}
+
+.location {
+    display: flex;
+    flex-direction: column;
+}
+
+// .change-button {
+//     width: 3rem;
+//     align-self: flex-end;
+// }
+
+.location-prefix {
+    font-size: 0.8rem;
+}
+
+.help-message {
+    margin: 0;
 }
